fixed some image loading issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div>
+    <div class="rootdiv">
 
         <div id="header">
             <div style="width: 85%; margin: 0 auto; padding-top: 18.5px;">
